loyalty card and spring profiles

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+current.environment=DEVELOPMENT
 server.port=9000
 
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -21,8 +22,10 @@ flyway.enabled=true
 logging.level.org.hibernate.SQL=DEBUG
 
 
+spring.jpa.hibernate.ddl-auto=validate
+
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-logging.level.root=WARN
+logging.level.root=INFO
 logging.level.com.company=DEBUG
